# ditod

./: .gitignore  pyproject.toml
ditod/: config.py
