[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ditod"]

[project]
name = "ditod"
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "timm",
    "scipy",
    "shapely"
]